--- a/css/style.css
+++ b/css/style.css
@@ -50,13 +50,12 @@
 	top:200px;
 }
 
-/* BOOTSTRAP CHANGES*/
 .navbar {
 	margin-bottom: 0px;
 }
 
 .limited-height > div {
-	height: 355px;
+	height: 360px;
 }
 
 .limited-height img {
@@ -74,6 +73,7 @@
 
 .card-text {
 	padding: 5px;
+	font-size: 16px;
 }
 
 .contact-block {
@@ -120,11 +120,21 @@
 }
 
 a:link, a:visited {
-	color: #8BC34A;
+	color: #0c83e4;
 }
 
 a:hover {
-    color: #8BC34A;
+    color: #2ea1ff;
+    text-decoration: none;
+}
+
+.alt-style-link:link, .alt-style-link:visited {
+	color: #8BC34A;
+}
+
+.alt-style-link:hover {
+    color: #a1cf6e;
+    text-decoration: none;
 }
 
 .nav-custom > li > a {
@@ -148,4 +158,14 @@ a:hover {
 
 .nav-custom > li.dropdown.open > a {
 	background-color: #8BC34A;
+}
+
+.card a:hover {
+	background-color: #F5F5F5;
+	display:block;
+}
+
+.page-description {
+	padding: 10px;
+	font-size:16px;
 }
