--- a/css/style.css
+++ b/css/style.css
@@ -170,11 +170,31 @@ a:hover {
 	font-size:16px;
 }
 
-.card-stc-header {
+.card-stc {
+	min-height: 300px;
+	padding: 20px;
+}
 
+.card-stc-header {
+	padding-top: 50px;
 }
 
 .card-stc-paragraph {
 	display: inline-block;
-	min-height: 200px;
+	text-align: left;
+}
+
+.commercial-hardware {
+	display: flex;
+	flex-flow: row wrap;
+}
+
+.commercial-hardware-item {
+	flex: 0 1 160px;
+	text-align: center;
+	align-self: flex-end;
+}
+
+.commercial-hardware-item > img {
+	max-width: 150px;
 }
