--- a/less/style.less
+++ b/less/style.less
@@ -1,12 +1,20 @@
 //Large devices - desktops (≥1200px)
 @import "lg/header-lg.less";
+@import "lg/gallery-lg.less";
+@import "lg/important-descriptor-lg.less";
 @import "lg/body-lg.less";
 
 //Medium devices - desktops (≥992px)
 @import "md/header-md.less";
+@import "md/gallery-md.less";
+@import "md/important-descriptor-md.less";
 
 //Small devices - tablets (≥768px)
 @import "sm/header-sm.less";
+@import "sm/gallery-sm.less";
+@import "sm/important-descriptor-sm.less";
 
 //extra small devices - phones (<768px)
 @import "xs/header-xs.less";
+@import "xs/gallery-xs.less";
+@import "xs/important-descriptor-xs.less";
