--- a/less/lg/header-lg.less
+++ b/less/lg/header-lg.less
@@ -33,7 +33,7 @@
 	border-radius: 2px;
 	box-shadow: 0px 2px 2px rgba(34, 25, 25, 0.4);
 	width: 360px;
-	background-image: url("../images/halftone.png");
+	background-image: url("../images/cream_pixels.png");
 	background-repeat: repeat;
 }
 
