--- a/less/lg/important-descriptor-lg.less
+++ b/less/lg/important-descriptor-lg.less
@@ -5,11 +5,12 @@
 	align-items: center;
 	min-height: 180px;
 	&-title {
+		font-family: @header-font-family;
 		flex: 0 1 auto;
 		font-size: 45px;
 		font-weight: 700;
 		min-width: 300px;
-		padding: 10px 20px 10px 10px;
+		padding: 10px;
 		text-align: center;
 		color: black;
 		line-height: 40px;
