--- a/less/md/header-md.less
+++ b/less/md/header-md.less
@@ -1,7 +1,9 @@
 @media screen and (max-width: 1199px) {
 	.title-block-content {
-		font-size: 75px;
+		font-size: 85px;
 		font-weight: 500;
+		line-height: 75px;
+		margin-top: 24px;
 	}
 
 	.title-black-bar {
