--- a/less/style.less
+++ b/less/style.less
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Hind|Open+Sans');
+@import "constants.less";
+
 //Large devices - desktops (≥1200px)
 @import "lg/header-lg.less";
 @import "lg/gallery-lg.less";
