--- a/less/lg/header-lg.less
+++ b/less/lg/header-lg.less
@@ -1,3 +1,7 @@
+.navbar {
+	font-family: @header-font-family;
+}
+
 .title-block {
 	height: 200px;
 	position: relative;
@@ -12,15 +16,16 @@
 }
 
 .title-block-content {
+	font-family: @header-font-family;
 	padding: 10px;
 	position: absolute;
 	left: 200px;
-	width: 450px;
-	font-size: 85px;
+	width: 550px;
+	font-size: 100px;
 	font-weight: 700;
 	color: black;
-	line-height: 80px;
-	margin-top: 18px;
+	line-height: 90px;
+	margin-top: 10px;
 }
 
 .title-block-side {
@@ -65,6 +70,7 @@
 .title-menu {
 	display: flex;
 	flex-flow: row nowrap;
+	font-family: @header-font-family;
 }
 
 .title-menu-item {
@@ -78,7 +84,7 @@
 	color: black;
 	height: 54px;
 	display: block;
-	line-height: 50px;
+	line-height: 55px;
 }
 
 .title-menu-item > a:link, 
@@ -90,5 +96,5 @@
 .title-menu-item > a:hover,
 .title-menu-item > a:focus {
 	border-bottom: 5px solid black;
-	color: #649130;
+	color: lighten(@highlight-color, 12%);
 }
