--- a/less/lg/important-descriptor-lg.less
+++ b/less/lg/important-descriptor-lg.less
@@ -17,7 +17,7 @@
 	}
 	&-description {
 		flex: 0 1 auto;
-		padding: 10px 10px 10px 20px;
+		padding: 10px;
 		border-left: 12px solid black;
 		font-size: 16px;
 	}
