--- a/less/lg/header-lg.less
+++ b/less/lg/header-lg.less
@@ -64,7 +64,7 @@
 }
 
 .title-menu > .dropdown.open > a {
-	border-bottom: 5px solid black;
+	border-bottom: 5px solid darken(@highlight-color, 10%);
 }
 
 .title-menu .dropdown-menu li a {
