Fill in contact us page and add feedback page

--- a/less/lg/body-lg.less
+++ b/less/lg/body-lg.less
@@ -1,5 +1,6 @@
 body {
 	font-family: @body-font-family;
+	font-size: 16px;
 }
 
 h1, h2, h3 {
@@ -18,10 +19,6 @@ h3 {
 	display: inline-block;
 	font-weight: 700;
 	border-bottom: 7px lighten(@highlight-color, 35%) solid;
-}
-
-p {
-	font-size: 16px;
 }
 
 .title-block-pattern {
@@ -160,4 +157,16 @@ a.card:hover {
 
 .commercial-hardware-item > img {
 	max-width: 150px;
+}
+
+.contact-us-important-text {
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.small-horizontal-separator {
+	display: inline-block;
+	width: 400px;
+	height:4px;
+	background-color: #eee;
 }
