--- a/less/lg/header-lg.less
+++ b/less/lg/header-lg.less
@@ -29,10 +29,13 @@
 }
 
 .title-block-side {
-	padding: 10px;
 	position: absolute;
 	right: 0px;
 	top: 0px;
+}
+
+.contact-card {
+	padding: 10px;
 	height: 196px;
 	text-align: left;
 	border-radius: 2px;
@@ -40,11 +43,10 @@
 	width: 360px;
 	background-image: url("../images/cream_pixels.png");
 	background-repeat: repeat;
-}
-
-.title-block-side > div {
-	padding-top: 2px;
-	padding-bottom: 2px;
+	> div {
+		padding-top: 2px;
+		padding-bottom: 2px;
+	}
 }
 
 .title-black-bar {
