--- a/less/style.less
+++ b/less/style.less
@@ -11,13 +11,16 @@
 @import "md/header-md.less";
 @import "md/gallery-md.less";
 @import "md/important-descriptor-md.less";
+@import "md/body-md.less";
 
 //Small devices - tablets (≥768px)
 @import "sm/header-sm.less";
 @import "sm/gallery-sm.less";
 @import "sm/important-descriptor-sm.less";
+@import "sm/body-sm.less";
 
 //extra small devices - phones (<768px)
 @import "xs/header-xs.less";
 @import "xs/gallery-xs.less";
 @import "xs/important-descriptor-xs.less";
+@import "xs/body-xs.less";
