--- a/less/lg/gallery-lg.less
+++ b/less/lg/gallery-lg.less
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: flex-start;
+	margin: 0px -10px;
 	&-item {
 		flex: 1 0 360px;
 		margin: 10px 10px;
